--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -42,3 +42,5 @@ newArchEnabled=false
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+sdk.dir=C:/Users/cordo/AppData/Local/Android/Sdk
